[gd_scene load_steps=2 format=3 uid="uid://8w67718v7rk"]

[ext_resource type="Script" path="res://editor.gd" id="1_ix08l"]

[node name="Editor" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_ix08l")

[node name="TabContainer" type="TabContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
tab_alignment = 1
metadata/_edit_layout_mode = 1

[node name="PhotoEditing" type="Control" parent="TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 31.0

[node name="LayersList" type="ItemList" parent="TabContainer/PhotoEditing"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -164.0
grow_horizontal = 0
grow_vertical = 2
select_mode = 1
auto_height = true
metadata/_edit_layout_mode = 1

[node name="ToolsList" type="ItemList" parent="TabContainer/PhotoEditing"]
anchor_bottom = 1.0
offset_right = 81.0
grow_vertical = 2
auto_height = true
item_count = 4
item_0/text = "move"
item_0/disabled = true
item_1/text = "rotate"
item_1/disabled = true
item_2/text = "scale"
item_2/disabled = true
item_3/text = "new"
metadata/_edit_layout_mode = 1

[node name="Canvas" type="Control" parent="TabContainer/PhotoEditing"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -878.0
offset_top = -516.5
offset_right = 790.0
offset_bottom = 519.5
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_layout_mode = 1

[node name="TextureRect" type="TextureRect" parent="TabContainer/PhotoEditing/Canvas"]
offset_right = 40.0
offset_bottom = 40.0

[node name="Export" type="Control" parent="TabContainer"]
offset_right = 40.0
offset_bottom = 40.0

[connection signal="multi_selected" from="TabContainer/PhotoEditing/LayersList" to="." method="_on_layers_list_multi_selected"]
[connection signal="item_selected" from="TabContainer/PhotoEditing/ToolsList" to="." method="_on_tools_list_item_selected"]
